@@ -17,7 +17,8 @@
 require File.dirname(__FILE__) + '/helpers'
 
 
-class AuthenticationController < ApplicationController
+class AuthenticationTestController < ApplicationController
+  self.allow_forgery_protection    = true
 
   def index
     render :nothing=>true
@@ -28,93 +29,121 @@ class AuthenticationController < ApplicationController
   end
 end
 
-
-describe AuthenticationController do
-  controller_name :authentication
+describe ApplicationController do
+  controller_name :authentication_test
   before { controller.use_rails_error_handling! }
   before { @person = Person.make(:email=>'me@example.com', :locale=>:tlh, :timezone=>-11) }
 
-  describe 'unauthenticated' do
-    before { get :index }
+  describe 'unauthenticated request' do
+    describe '(HTML)' do
+      before { get :index }
+      it('should redirect to login page')         { should redirect_to(session_url) }
+      it('should store return URL in session')    { session[:return_url].should == request.url }
+      it('should reset I18n locale')              { I18n.locale.should == :en }
+      it('should reset TimeZone')                 { Time.zone.utc_offset == 0 }
+    end
 
-    it { should redirect_to(session_url) }
-    it('should store request URL in session')  { session[:return_url].should == request.url }
-    it('should reset I18n locale')             { I18n.locale.should == :en }
-    it('should reset TimeZone')                { Time.zone.utc_offset == 0 }
+    describe '(XML)' do
+      before { get :index, :format=>:xml }
+      it { should respond_with(401) }
+    end
+
+    describe '(JSON)' do
+      before { get :index, :format=>:json }
+      it { should respond_with(401) }
+    end
+
+    describe '(Atom)' do
+      before { get :index, :format=>:atom }
+      it { should respond_with(401) }
+    end
   end
 
-  describe 'unauthenticated XML' do
-    before { get :index, :format=>:xml }
-    it { should respond_with(401) }
+  describe 'session authentication' do
+    describe '(invalid session)' do
+      before { get :index, nil, :authenticated=>'foo' }
+      it('should redirect to login page')           { should redirect_to(session_url) }
+    end
+
+    describe '(authenticated)' do
+      before { get :index, nil, :authenticated=>@person.id }
+      it { should respond_with(200) }
+      it('should return authentication account')    { controller.send(:authenticated) == @person }
+      it('should set I18n.locale')                  { I18n.locale.should == :tlh }
+      it('should set Time.zone')                    { Time.zone.should == ActiveSupport::TimeZone[-11] }
+    end
   end
 
-  describe 'unauthenticated JSON' do
-    before { get :index, :format=>:json }
-    it { should respond_with(401) }
+  describe 'HTTP Basic authentication' do
+    describe '(with credentials)' do
+      before do
+        request.env['HTTP_AUTHORIZATION'] = ActionController::HttpAuthentication::Basic.encode_credentials(@person.username, 'secret')
+        get :index
+      end
+
+      it { should respond_with(200) }
+      it('should authenticate account')           { controller.send(:authenticated) == @person }
+    end
+
+    describe '(with invalid credentials)' do
+      before do
+        request.env['HTTP_AUTHORIZATION'] = ActionController::HttpAuthentication::Basic.encode_credentials(@person.username, 'wrong')
+        get :index
+      end
+
+      it { should respond_with(401) }
+    end
+
+    describe '(POST)' do
+      before do
+ActionController::Base.allow_forgery_protection    = true
+        request.env['HTTP_AUTHORIZATION'] = ActionController::HttpAuthentication::Basic.encode_credentials(@person.username, 'secret')
+        request.env['CONTENT_TYPE'] = Mime::URL_ENCODED_FORM.to_s
+        post :update, :format=>:html
+      end
+    end
   end
 
-  describe 'with invalid session' do
-    before { get :index, nil, :authenticated=>0 }
-    it { should redirect_to(session_url) }
-  end
-
-  describe 'with authenticated session' do
-    before { get :index, nil, :authenticated=>@person.id }
-    it { should respond_with(200) }
-    it { should accept_authenticated_user }
-    it('should set I18n locale')               { I18n.locale.should == :tlh }
-    it('should set TimeZone')                  { Time.zone.should == ActiveSupport::TimeZone[-11] }
-  end
-
-  describe 'with HTTP Basic' do
-    before { request.env['HTTP_AUTHORIZATION'] = ActionController::HttpAuthentication::Basic.encode_credentials('me', 'secret') }
-    before { get :index }
-
-    it { should respond_with(200) }
-    it { should accept_authenticated_user }
-  end
-
-  describe 'with HTTP Basic but wrong credentials' do
-    before { request.env['HTTP_AUTHORIZATION'] = ActionController::HttpAuthentication::Basic.encode_credentials('me', 'wrong') }
-    before { get :index }
-
-    it { should respond_with(401) }
-  end
-
-  describe 'with access key' do
-    describe 'Atom' do
+  describe 'access key authentication' do
+    describe '(Atom)' do
       before { get :feed, :access_key=>@person.access_key, :format=>:atom }
       it { should respond_with(200) }
-      it { should accept_authenticated_user }
+      it('should authenticate account')           { controller.send(:authenticated) == @person }
     end
 
-    describe 'iCal' do
+    describe '(iCal)' do
       before { get :feed, :access_key=>@person.access_key, :format=>:ics }
       it { should respond_with(200) }
-      it { should accept_authenticated_user }
+      it('should authenticate account')           { controller.send(:authenticated) == @person }
     end
 
-    describe 'HTML' do
+    describe '(HTML)' do
       before { get :feed, :access_key=>@person.access_key, :format=>:html }
-      it { should redirect_to(session_url) }
+      it('should redirect to login page')         { should redirect_to(session_url) }
     end
 
-    describe 'POST method' do
+    describe '(POST)' do
       before { post :feed, :access_key=>'wrong', :format=>:atom }
       it { should respond_with(405) }
     end
 
-  end
-
-  describe 'with wrong access key' do
-    before { get :feed, :access_key=>'wrong', :format=>:atom }
-    it { should respond_with(403) }
-  end
-
-  def accept_authenticated_user
-    simple_matcher "accept authenticated user" do |given|
-      controller.send(:authenticated) == @person
+    describe '(invalid access key)' do
+      before { get :feed, :access_key=>'wrong', :format=>:atom }
+      it { should respond_with(403) }
     end
   end
-  
+
+  describe 'forgery protection' do
+    before { request.env['CONTENT_TYPE'] = Mime::URL_ENCODED_FORM.to_s }
+    it 'should apply when using session authentication' do
+      post :index, nil, :authenticated=>@person.id
+      should respond_with(422)
+    end
+    it 'should not apply when using HTTP Basic authentication' do
+      request.env['HTTP_AUTHORIZATION'] = ActionController::HttpAuthentication::Basic.encode_credentials(@person.username, 'secret')
+      post :index
+      should respond_with(200)
+    end
+  end
+
 end
