@@ -1,3 +1,5 @@
+* CSRF (forgery protection) disabled when using HTTP Basic authentication.
+This allows the wonders of curl during development, but may pose a security issue.
 * Switched to using MySQL instead of SQLite. There are some noticable
 differences and developing on the same database we intend to deploy on is just
 better.
